# intelligence

./: .gitignore  README.md  build_backend.py  pyproject.toml
.factory/: init.sh  services.yaml
.factory/skills/bridge-worker/: SKILL.md
.factory/skills/pipeline-worker/: SKILL.md
dashboard/: README.md  direction-detail.html  direction-map.html  evidence.html  index.html  product-line.html
dashboard/css/: style.css
dashboard/data/: frontend_dashboard.json  jade_dashboard.json
dashboard/js/: components.js  data.js  nav.js
docs/: PIPELINE_AUDIT.md  adding-a-pack.md  architecture.md
docs/migration/: boundary-map.md  jade-migration-status.md  second-pack-criteria.md
docs/plans/: 2026-03-23-task-2-engine-scaffolding-design.md  2026-03-23-task-2-engine-scaffolding-plan.md  validation-contract-streetwear-bridge.md
examples/designer_streetwear/: README.md
examples/jade/: README.md
output/streetwear/: dashboard.json  frontend_dashboard.json  normalized_samples.json  report.html  report.json  report.md  scored_samples.json
src/intelligence/: __init__.py  cli.py
tests/: __init__.py  test_adapters.py  test_dashboard_output.py  test_direction_clustering.py  test_engagement_scoring.py  test_frontend_builder.py  test_jade_flow.py  test_packaging.py  test_parsing.py  test_prepare_input.py  test_projects.py  test_reporting.py  test_schema.py  test_scoring_engine.py  test_streetwear_flow.py  test_validate_pack.py  test_workflows.py
tests/fixtures/: douyin_downloader.jsonl  mediacrawler_jade_export.jsonl  mediacrawler_streetwear_export.jsonl  xhs_downloader.jsonl
(+144 files in other folders)
